# perception

./: .rosinstall  .travis.yml  README.md  catkin.options  dependencies.rosinstall
dialogsystem/: CMakeLists.txt  package.xml
dialogsystem/CMU/cnodes/: continuous.c
dialogsystem/PEPPER/: bakery_service.top  closings.top  introductions.top  simplecontrol.top
dialogsystem/launch/: dialog.launch  pepper.corpus
dialogsystem/nodes/: dialogCoreServerManager.py  dialogManager.py  nao_speech.py  netparamupdater.py  rpc_server.py  speechRecognizer.py
percepteROS/: CMakeLists.txt  package.xml
percepteROS/cmake/: percepteROS_config.cmake
percepteROS/descriptors/typesystem/: all_types.xml
percepteROS/include/percepteROS/types/: all_types.h  type_definitions.h
percepteros/: .rosinstall  CMakeLists.txt  package.xml
percepteros/cmake/: percepteROS_config.cmake  percepteros_config.cmake
percepteros/config/: board.yaml  cake.yaml  change_config_mongodb_playback.ini  config.yaml  config_kinect_robot_urdf_filter_not_loc.ini  cylinder.yaml  end.yaml  filewriter.yaml  knife.yaml  knife.yaml   plate.yaml  region-notes.yaml  spatula.yaml  spatulaRecognition.yaml
percepteros/data/: KNIFE_FINAL.ply  knife.ply  knife_ascii.ply  knife_true_zero.ply
percepteros/descriptors/analysis_engines/: board.xml  cakeros.xml  cateros.backup  cateros.xml  cateros.xml.orig  change_storage.xml  cylinder.xml  dbwriter.xml  filewriter.xml  knife.xml  plate.xml  plates.xml  spatulAnnotation.xml  spatula.xml  tray.xml
percepteros/descriptors/annotators/: .KnifeAnnotator.xml.swp  ARMarkerAnnotator.xml  BoardAnnotator.xml  CakeAnnotator.xml  ColorClusterer.xml  CylinderAnnotator.xml  DataAquisition.xml  IncrementalPointRegistration.xml  KinectFusion.xml  KnifeAnnotator.xml  ObjectRegionFilter.xml  PlateAnnotator.xml  RBBAnnotator.xml  ROSPublisher.xml  SpatulAnnotator.xml  SpatulaRecognition.xml  SzeneRecorder.xml  TrayAnnotator.xml
percepteros/descriptors/typesystem/: all_types.xml  enclosing_circle.xml  pipeline_specifications.xml  recognition_objects.xml  record_data.xml
percepteros/include/percepteROS/: CylinderAnnotator.h
percepteros/include/percepteros/: CaterrosControlledAnalysisEngine.h  CaterrosPipelineManager.h  CylinderAnnotator.h  HueClusterComparator.h  ObjectRegionFilter.h  RegionDefinition.h  ValueClusterComparator.h
percepteros/include/percepteros/types/: all_types.h  enclosing_circle.h  pipeline_specifications.h  recognition_objects.h  record_data.h  type_definitions.h
percepteros/launch/: cateros.launch  dbwriter.launch  filewriter.launch
percepteros/src/: .CakeAnnotator.cpp.swp  .KnifeAnnotator.cpp.swp  .PlateAnnotator.cpp.swp  .TrayAnnotator.cpp.swp  ARMarkerAnnotator.cpp  BoardAnnotator.cpp  CakeAnnotator.cpp  CaterrosControlledAnalysisEngine.cpp  CaterrosPipelineManager.cpp  CaterrosRun.cpp  ColorClusterer.cpp  ColorClusterer.cpp.orig  CylinderAnnotator.cpp  DataAquisition.cpp  IncrementalPointRegistration.cpp  KinectFusion.cpp  KnifeAnnotator.cpp  ObjectRegionFilter.cpp  PlateAnnotator.cpp  RBBAnnotator.cpp  ROSPublisher.cpp  RegionDefinition.cpp  SpatulAnnotator.cpp  SpatulaRecognition.cpp  SzeneRecorder.cpp  TrayAnnotator.cpp
publisher/: CMakeLists.txt  package.xml
publisher/src/: publisher.cpp
