<?xml version="1.0"?>
<package>
  <name>dialogsystem</name>
  <version>0.0.0</version>
  <description>dialog system for pepper robot</description>

  <maintainer email="fkenghag@uni-bremen.de">Franklin Kenfack Kenghagho</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>sys</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>naoqi_bridge_msgs</run_depend>
  <run_depend>naoqi_driver</run_depend>
  <run_depend>naoqi_driver_py</run_depend>
  <run_depend>SimpleXMLRPCServer.SimpleXMLRPCRequestHandler</run_depend>
  <run_depend>SimpleXMLRPCServer.SimpleXMLRPCServer</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
 

  
</package>
